tests/ui/complete.unexpected_failure.output
Running `unexpected failure`...
  testing crate example/tests/build-fail/fail-4 ... IGNORED
  testing crate example/tests/build-fail/fail-2 ... FAILED
  testing crate example/tests/build-fail/fail-1 ... FAILED
  testing crate example/tests/build-fail/fail-3 ... FAILED

example/tests/build-fail/fail-2 failed:
  Unable to build the crate!

  ┍━━━━━━━━┑
  │ stderr │
  ┕━━━━━━━━┙
       Compiling fail-2 v0.1.0 (file:///home/den/rust-crate-compile-test/example/tests/build-fail/fail-2)
    error[E0432]: unresolved import `mod2::func3`
     --> src/lib.rs:2:9
      |
    2 |     use mod2::func3; //~ ERROR E0432
      |         ^^^^^^^^^^^ no `func3` in `mod2`. Did you mean to use `func2`?

    error[E0412]: cannot find type `NonExistingType` in this scope
      --> src/lib.rs:10:19
       |
    10 |     fn func2() -> NonExistingType {
       |                   ^^^^^^^^^^^^^^^ not found in this scope

    error: aborting due to 2 previous errors

    Some errors occurred: E0412, E0432.
    For more information about an error, try `rustc --explain E0412`.
    error: Could not compile `fail-2`.

    To learn more, run the command again with --verbose.
  ┍━━━━━━━━━━━━┑
  │ end stderr │
  ┕━━━━━━━━━━━━┙

example/tests/build-fail/fail-1 failed:
  Unable to build the crate!

  ┍━━━━━━━━┑
  │ stderr │
  ┕━━━━━━━━┙
       Compiling fail-1 v0.1.0 (file:///home/den/rust-crate-compile-test/example/tests/build-fail/fail-1)
    error[E0432]: unresolved import `mod2::func3`
     --> src/lib.rs:2:9
      |
    2 |     use mod2::func3; //~  WARNING another warning
      |         ^^^^^^^^^^^ no `func3` in `mod2`. Did you mean to use `func2`?

    error[E0412]: cannot find type `NonExistingType` in this scope
      --> src/lib.rs:12:19
       |
    12 |     fn func2() -> NonExistingType {
       |                   ^^^^^^^^^^^^^^^ not found in this scope

    error: aborting due to 2 previous errors

    Some errors occurred: E0412, E0432.
    For more information about an error, try `rustc --explain E0412`.
    error: Could not compile `fail-1`.

    To learn more, run the command again with --verbose.
  ┍━━━━━━━━━━━━┑
  │ end stderr │
  ┕━━━━━━━━━━━━┙

example/tests/build-fail/fail-3 failed:
  Unable to build the crate!

  ┍━━━━━━━━┑
  │ stderr │
  ┕━━━━━━━━┙
       Compiling fail-3 v0.1.0 (file:///home/den/rust-crate-compile-test/example/tests/build-fail/fail-3)
    error[E0432]: unresolved import `mod_2::func3`
     --> src/mod_1.rs:1:5
      |
    1 | use mod_2::func3; //~  WARNING another warning
      |     ^^^^^^^^^^^^ no `func3` in `mod_2`. Did you mean to use `func2`?

    error[E0412]: cannot find type `NonExistingType` in this scope
     --> src/mod_2/mod.rs:1:15
      |
    1 | fn func2() -> NonExistingType {
      |               ^^^^^^^^^^^^^^^ not found in this scope

    error[E0603]: function `func1` is private
     --> src/lib.rs:6:5
      |
    6 |     mod_1::func1();
      |     ^^^^^^^^^^^^

    error[E0308]: mismatched types
     --> src/lib.rs:4:18
      |
    4 |   fn test() -> u32 {
      |  __________________^
    5 | |     //~^ ERROR E0308
    6 | |     mod_1::func1();
      | |                   - help: consider removing this semicolon
    7 | |     //~^ ERROR function `func1` is private
    8 | | }
      | |_^ expected u32, found ()
      |
      = note: expected type `u32`
                 found type `()`

    error: aborting due to 4 previous errors

    Some errors occurred: E0308, E0412, E0432, E0603.
    For more information about an error, try `rustc --explain E0308`.
    error: Could not compile `fail-3`.

    To learn more, run the command again with --verbose.
  ┍━━━━━━━━━━━━┑
  │ end stderr │
  ┕━━━━━━━━━━━━┙

Summary: 0 successful, 3 failed, 1 ignored.
